# 20260423_mixpanel-oh-flows

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
.github/: copilot-instructions.md
projects/20260423_mixpanel-oh-flows/: run.py
projects/analytics-lab/: run.py
references/: README.md
scripts/: run_request.py
src/: analysis_ideas.py  main.py
src/common/: export.py  plots.py  qa.py
src/connectors/: mixpanel.py
