[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "analytics-lab"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
